# foldering

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
conf/parameters/: a.txt  b.txt
foldering/: __init__.py  __main__.py  main.py  path.py  reader.py  utils.py
foldering/abstractions/: descriptor.py
foldering/implementations/: __init__.py  configuration.py  validators.py
tests/: test_implementations.py  test_scraping.py  test_utils.py
